Avoid spacing for first and last component on page

--- a/assets/styles/vitae/_layouts.scss
+++ b/assets/styles/vitae/_layouts.scss
@@ -364,12 +364,12 @@
         }
       }
       h1, h2, h3, h4, h5, h6 {
-        &.feature-first {
+        &.component_first {
           padding-top: 0;
           @include flush-top-heading;
         }
       }
-      .feature-first {
+      .component_first {
         padding-top: 0;
         h1, h2, h3, h4, h5, h6 {
           &:first-of-type {
@@ -468,12 +468,12 @@
       h4,
       h5,
       h6 {
-        &.feature-first {
+        &.component_first {
           padding-top: 0;
           @include flush-top-heading;
         }
       }
-      .feature-first {
+      .component_first {
         padding-top: 0;
         h1,
         h2,
@@ -537,7 +537,7 @@
       .stage_meta, .stage_content {
         flex: 0.5 0.5 auto;
       }
-      .stage_content.feature-last {
+      .stage_content.component_last {
         flex: 0;
       }
     }
